# p3-relevance-classifier

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.vllm  apply_classifier.py  constants.py  delpher-classifier.py  delpher_annotations_progress.json  evaluate-llm-annotations.py  justfile  label_reddit_items.py  project_types.py  pyproject.toml  reddit-active-learning.py  reddit-classifier.py  reddit-evaluation.py  reddit-llm-classifier.py  reddit-llm-label-evaluation-results.txt  reddit_active_learning.py  reddit_annotations_progress.json  reddit_annotations_progress.nl.json  reddit_evaluation.py  reddit_llm_classifier.py  relevance_model.pkl  relevance_vectorizer.pkl  requirements.txt  temp-reddit-nl-active-learning-results.txt  toy.py  util.py
annotations/: manual_eval_labels.json  reddit_annotations_progress.en.json  reddit_annotations_progress.nl.json
