[project]
name = "p3-relevance-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ftfy==6.3.1",
    "joblib==1.5.3",
    "lightgbm>=4.6.0",
    "nltk==3.9.4",
    "numpy>=2.3.5",
    "pandas==3.0.2",
    "python-dotenv==1.2.2",
    "scikit-learn==1.8.0",
    "sentence-transformers>=5.4.1",
    "small-text==1.4.1",
    "tqdm==4.67.3",
    "vllm>=0.21.0; sys_platform == 'linux'",
]
